<resources>
    <string name="app_name">DicodingStory</string>
    <string name="dicoding_logo">logo of Dicoding</string>

    <!--  custom view  -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="wrong_email">Invalid email address</string>
    <string name="wrong_password">Password must be at least 8 characters</string>

    <!--  edit text view  -->
    <string name="name">Name</string>
    <string name="name_hint">Your name</string>

    <!--  login activity  -->
    <string name="illus_login">Illustration Image for Login Page</string>
    <string name="login_welcome">Welcome back!</string>
    <string name="login_dialog">We\'re so excited to see you again! Let\'s start exploring student story again</string>
    <string name="login_button">Log In</string>
    <string name="text_register_dialog">Need an account?</string>
    <string name="text_register_button">Register here</string>

    <!--  register activity  -->
    <string name="illus_register">Illustration Image for Login Page</string>
    <string name="register_title">Create an account</string>
    <string name="register_button">Register</string>
    <string name="text_login_button">Already have an account?</string>

    <!--  story item  -->
    <string name="image_desc">Image of Student Story</string>
    <string name="dummy_name">Fikri Faizal</string>
    <string name="dummy_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="dummy_date">January 01, 2022</string>

    <!--  menu main  -->
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>

    <!--  detail activity  -->
    <string name="detail_story">Detail Story</string>

    <!--  upload activity  -->
    <string name="image_thumbnail">Uploaded Image Thumbnail</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload_dialog">Let people know about your story</string>
    <string name="upload_hint">Write a description…</string>
    <string name="upload">Upload</string>
    <string name="upload_story">Upload Story</string>

    <!--  error data  -->
    <string name="illus_error">Illustration Image for Error</string>
    <string name="error_dialog">Failed to show data\nPlease try again later</string>
    <string name="retry">Retry</string>

    <!--  bottom navigation  -->
    <string name="home">Home</string>
    <string name="maps">Maps</string>
</resources>